--- a/Auction.Web/Views/Auction/Index.cshtml
+++ b/Auction.Web/Views/Auction/Index.cshtml
@@ -1,4 +1,21 @@
 ﻿@model List<Auction.Web.Models.AuctionItemOverviewModel>
+<script type="text/javascript">
+		$(function () {
+
+				// Reference the auto-generated proxy for the hub.  
+				var auctionHub = $.connection.auctionHub;
+				
+				// Create a function that the hub can call back to display new data.
+				auctionHub.client.updateAuctionHighestBid = function (auctionItemId, biddingDate, highestBid) {						
+						var auctionItem = $("span[data-auctionitem=" + auctionItemId + "]");
+						if (auctionItem.length > 0) {
+								auctionItem.html("<strong>&euro;&nbsp;" + highestBid + "</strong>");
+						} 
+				};
+
+				$.connection.hub.start();
+		});
+</script>
 <div class="lister">
 	@if(Model.Count > 0)
 	{
@@ -30,7 +47,7 @@
 																</li>
 																<li>
 																		<span class="label">Hoogste bod:</span>
-																		@item.HighestBiddingAsString
+																		<span data-auctionitem="@item.Id">@item.HighestBiddingAsString</span>
 																</li>
 																<li>
 																		<span class="label">Locatie:</span>
