--- a/Auction.Web/Views/Shared/SiteLayout.cshtml
+++ b/Auction.Web/Views/Shared/SiteLayout.cshtml
@@ -10,17 +10,19 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="/Content/css/normalize.min.css">
-        <link rel="stylesheet" href="/Content/css/main.css">
-				<link rel="stylesheet" href="/Content/css/groupbox.css"/>
-        <script src="/Scripts/vendor/modernizr-2.6.2.min.js"></script>
+        <link rel="stylesheet" href="~/Content/css/normalize.min.css">
+        <link rel="stylesheet" href="~/Content/css/main.css">
+				<link rel="stylesheet" href="~/Content/css/groupbox.css"/>
+        <script src="~/Scripts/vendor/modernizr-2.6.2.min.js"></script>
 				<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="Script/vendor/jquery-1.9.1.min.js"><\/script>')</script>
-				<script src="/Scripts/vendor/jquery.validate.min.js"></script>
-				<script src="/Scripts/vendor/jquery.validate.unobtrusive.min.js"></script>
-				<script src="/Scripts/vendor/jquery.validate.messages-nl.js"></script>
-				<script src="/Scripts/vendor/jquery.globalize.js"></script>
-				<script src="/Scripts/vendor/jquery.globalize.culture.nl-NL.js"></script>				
+        <script>window.jQuery || document.write('<script src="~/Script/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+				<script src="~/Scripts/vendor/jquery.validate.min.js"></script>
+				<script src="~/Scripts/vendor/jquery.validate.unobtrusive.min.js"></script>
+				<script src="~/Scripts/vendor/jquery.validate.messages-nl.js"></script>
+				<script src="~/Scripts/vendor/jquery.globalize.js"></script>
+				<script src="~/Scripts/vendor/jquery.globalize.culture.nl-NL.js"></script>
+				<script src="~/Scripts/vendor/jquery.signalR-1.1.3.min.js"></script>
+				<script src="~/signalr/hubs"></script>
     </head>
     <body>
 				
