--- a/Auction.Web/Views/Content/FAQ.cshtml
+++ b/Auction.Web/Views/Content/FAQ.cshtml
@@ -6,5 +6,5 @@
 		Een item toevoegen kunt u <a href="~/Auction/Add">hier</a> doen
 		<h3>Betaling</h3>
 		Indien uw bod het hoogste is geworden dient u het geld over te maken op rekeningnummer: @Auction.BLL.Config.AccountNumber.<br />
-		Tevens ontvangt u dan tevens de contactgegevens waar u het veiling item kunt ophalen.
+		Tevens ontvangt u dan de contactgegevens waar u het veiling item kunt ophalen.
 </div>
