--- a/Auction.Web/Views/Shared/SiteLayout.cshtml
+++ b/Auction.Web/Views/Shared/SiteLayout.cshtml
@@ -23,6 +23,18 @@
 				<script src="~/Scripts/vendor/jquery.globalize.culture.nl-NL.js"></script>
 				<script src="~/Scripts/vendor/jquery.signalR-1.1.3.min.js"></script>
 				<script src="~/signalr/hubs"></script>
+				<script>
+						(function (i, s, o, g, r, a, m) {
+								i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+										(i[r].q = i[r].q || []).push(arguments)
+								}, i[r].l = 1 * new Date(); a = s.createElement(o),
+								m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+						})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+						ga('create', '@Auction.BLL.Config.GoogleTrackingId', '@Auction.BLL.Config.GoogleTrackingName');
+						ga('send', 'pageview');
+
+				</script>
     </head>
     <body>
 				
@@ -46,14 +58,5 @@
 				</div>
         <script src="/Scripts/plugins.js"></script>
         <script src="/Scripts/main.js"></script>
-
-        <script>
-        		var _gaq = [['_setAccount', 'UA-XXXXX-X'], ['_trackPageview']];
-        		(function (d, t) {
-        				var g = d.createElement(t), s = d.getElementsByTagName(t)[0];
-        				g.src = ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js';
-        				s.parentNode.insertBefore(g, s)
-        		}(document, 'script'));
-        </script>
     </body>
 </html>
