--- a/Auction.Web/Views/Content/FAQ.cshtml
+++ b/Auction.Web/Views/Content/FAQ.cshtml
@@ -1,10 +1,25 @@
 ﻿<div>
 		<h3>Veiling</h3>
-		Een veiling item blijft @Auction.BLL.Config.Auction.DaysValid dagen op de site vermeld. Na @Auction.BLL.Config.Auction.DaysValid dagen wordt het item toegekend aan de hoogste bieder. </br>
-		Hiervan ontvangt u een e-mail.<br />
+		Het doel van deze veiling site is om geld in te zamelen voor de diaconie.<br />
+		Hierbij kunt u helpen door spullen aan te bieden op deze veilingsite, of te bieden op de aangeboden spullen.<br />
 		<br />
-		Een item toevoegen kunt u <a href="~/Auction/Add">hier</a> doen
-		<h3>Betaling</h3>
-		Indien uw bod het hoogste is geworden dient u het geld over te maken op rekeningnummer: @Auction.BLL.Config.AccountNumber.<br />
-		Tevens ontvangt u dan de contactgegevens waar u het veiling item kunt ophalen.
+		De werking is als volgt.<br />
+
+		<ul>
+			<li style="margin-bottom: 5px;">
+				Op de geplaatste veiling items kunt u een bod uitbrengen.<br />				
+			</li>
+			<li style="margin-bottom: 5px;">
+				Na @Auction.BLL.Config.Auction.DaysValid dagen wordt het veiling item gesloten en wordt deze toegewezen aan de hoogste bieder.
+			</li>
+			<li style="margin-bottom: 5px;">
+				Als u de hoogste bieder bent ontvangt u hierover een e-mail met daarin de contactgegevens van de aanbieder en het verzoek om het geboden bedrag over te maken naar de diaconie.<br />
+				Rekeningnummer: <strong>@Auction.BLL.Config.AccountNumber</strong> o.v.v. het veiling nummer.
+			</li>
+			<li style="margin-bottom: 5px;">
+				Indien u het geboden bedrag heeft over gemaakt kunt u de spullen ophalen bij de aanbieder van het veiling item.
+			</li>
+		</ul>
+		
+		Een veiling site heeft uiteraard spullen nodig, een item toevoegen kunt u <strong><a href="~/Auction/Add">hier</a></strong> doen.
 </div>
