--- a/Auction.Web/Views/Content/FAQ.cshtml
+++ b/Auction.Web/Views/Content/FAQ.cshtml
@@ -21,5 +21,7 @@
 			</li>
 		</ul>
 		
-		Een veiling site heeft uiteraard spullen nodig, een item toevoegen kunt u <strong><a href="~/Auction/Add">hier</a></strong> doen.
+		Een veiling site heeft uiteraard spullen nodig, een item toevoegen kunt u <strong><a href="~/Auction/Add">hier</a></strong> doen.<br />
+		<br />
+		Mocht u verder nog vragen hebben kunt u e-mail sturen naar <a href="mailto:veiling@hervormdrouveen.nl"><strong>veiling@hervormdrouveen.nl</strong></a>
 </div>
