Veiling items worden niet meer automatisch stopgezet

--- a/Auction.Web/Views/Content/FAQ.cshtml
+++ b/Auction.Web/Views/Content/FAQ.cshtml
@@ -10,14 +10,14 @@
 				Op de geplaatste veiling items kunt u een bod uitbrengen.<br />				
 			</li>
 			<li style="margin-bottom: 5px;">
-				Na @Auction.BLL.Config.Auction.DaysValid dagen wordt het veiling item gesloten en wordt deze toegewezen aan de hoogste bieder.
+				De aanbieder bepaalt wanneer een veiling item gesloten wordt.
 			</li>
 			<li style="margin-bottom: 5px;">
-				Als u de hoogste bieder bent ontvangt u hierover een e-mail met daarin de contactgegevens van de aanbieder en het verzoek om het geboden bedrag over te maken naar de diaconie.<br />
+				Als u de hoogste bieder bent ontvangt u hierover een e-mail met daarin de contactgegevens van de aanbieder.<br />
+			</li>
+			<li style="margin-bottom: 5px;">
+				Het geboden bedrag dient u te overhandigen aan de aanbieder. De aanbieder bepaalt dan zelf welk bedrag er gedoneerd wordt aan de diaconie.<br/>
 				Rekeningnummer: <strong>@Auction.BLL.Config.AccountNumber</strong> o.v.v. het veiling nummer.
-			</li>
-			<li style="margin-bottom: 5px;">
-				Indien u het geboden bedrag heeft over gemaakt kunt u de spullen ophalen bij de aanbieder van het veiling item.
 			</li>
 		</ul>
 		
