--- a/Auction.Web/Views/Auction/Detail.cshtml
+++ b/Auction.Web/Views/Auction/Detail.cshtml
@@ -167,7 +167,7 @@
 										</div>
 								</div>
 						</div>
-						@if(!@Model.AuctionEndedMailSended) {
+						@if(!@Model.Ended) {
 								<div class="item newbid">
 										<div class="header">
 												<div>
